Added GUI for registering new patients. Added Try/Catch for some of the methods in the datahandler. Fixed the PatientExists method. It now takes a string (personnummer) and returns true if there is a patient with that personnummer in the database.

--- a/HospitalManagement/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement/HospitalManagement.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseHandler.cs" />
+    <Compile Include="MainWindowData.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="MainWindowForm.cs">
       <SubType>Form</SubType>
@@ -58,11 +59,21 @@
     <Compile Include="MainWindowForm.Designer.cs">
       <DependentUpon>MainWindowForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PatientRegistryData.cs" />
+    <Compile Include="PatientRegistryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PatientRegistryForm.Designer.cs">
+      <DependentUpon>PatientRegistryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Employee.cs" />
     <EmbeddedResource Include="MainWindowForm.resx">
       <DependentUpon>MainWindowForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PatientRegistryForm.resx">
+      <DependentUpon>PatientRegistryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
