--- a/HospitalManagement/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement/HospitalManagement.csproj
@@ -59,6 +59,13 @@
     <Compile Include="MainWindowForm.Designer.cs">
       <DependentUpon>MainWindowForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PatientJournalData.cs" />
+    <Compile Include="PatientJournalForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PatientJournalForm.Designer.cs">
+      <DependentUpon>PatientJournalForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PatientRegistryData.cs" />
     <Compile Include="PatientRegistryForm.cs">
       <SubType>Form</SubType>
@@ -71,6 +78,9 @@
     <Compile Include="Employee.cs" />
     <EmbeddedResource Include="MainWindowForm.resx">
       <DependentUpon>MainWindowForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PatientJournalForm.resx">
+      <DependentUpon>PatientJournalForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PatientRegistryForm.resx">
       <DependentUpon>PatientRegistryForm.cs</DependentUpon>
@@ -100,6 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
