WiP patient dataset searchfunction (works but looks rough and needs more finetuning)

--- a/HospitalManagement/HospitalManagement/App.config
+++ b/HospitalManagement/HospitalManagement/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HospitalManagement.Properties.Settings.HospitalConnectionString"
-            connectionString="Host=localhost;Database=Hospital;Username=postgres"
+            connectionString="Host=localhost;Username=postgres;Password=projekt;Database=Hospital"
             providerName="Npgsql" />
     </connectionStrings>
     <startup> 
