--- a/HospitalManagement/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement/HospitalManagement.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainWindowData.cs" />
+    <Compile Include="Medication.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="MainWindowForm.cs">
       <SubType>Form</SubType>
@@ -87,6 +88,7 @@
     <Compile Include="PatientRegistryForm.Designer.cs">
       <DependentUpon>PatientRegistryForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrescriptionData.cs" />
     <Compile Include="PrescriptionForm.cs">
       <SubType>Form</SubType>
     </Compile>
