--- a/HospitalManagement/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement/HospitalManagement.csproj
@@ -53,6 +53,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>HospitalDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="JournalPost.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +62,12 @@
     </Compile>
     <Compile Include="MainWindowData.cs" />
     <Compile Include="Medication.cs" />
+    <Compile Include="NoteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoteForm.Designer.cs">
+      <DependentUpon>NoteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Patient.cs" />
     <Compile Include="MainWindowForm.cs">
       <SubType>Form</SubType>
@@ -105,6 +112,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindowForm.resx">
       <DependentUpon>MainWindowForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NoteForm.resx">
+      <DependentUpon>NoteForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PatientInfoUpdateForm.resx">
       <DependentUpon>PatientInfoUpdateForm.cs</DependentUpon>
