--- a/HospitalManagement/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement/HospitalManagement.csproj
@@ -72,6 +72,12 @@
       <DependentUpon>ChangeUserInfoForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DatabaseHandler.cs" />
+    <Compile Include="DepartmentRegistryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DepartmentRegistryForm.Designer.cs">
+      <DependentUpon>DepartmentRegistryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Department.cs" />
     <Compile Include="EmployeeRegistryForm.cs">
       <SubType>Form</SubType>
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ChangeUserInfoForm.resx">
       <DependentUpon>ChangeUserInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DepartmentRegistryForm.resx">
+      <DependentUpon>DepartmentRegistryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EmployeeRegistryForm.resx">
       <DependentUpon>EmployeeRegistryForm.cs</DependentUpon>
