--- a/HospitalManagement/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement/HospitalManagement.csproj
@@ -159,6 +159,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="RoomRegistryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RoomRegistryForm.Designer.cs">
+      <DependentUpon>RoomRegistryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SignInForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -217,6 +223,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RoomRegistryForm.resx">
+      <DependentUpon>RoomRegistryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SignInForm.resx">
       <DependentUpon>SignInForm.cs</DependentUpon>
     </EmbeddedResource>
