Booking - test types load but don't save yet

--- a/HospitalManagement/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement/HospitalManagement.csproj
@@ -171,6 +171,7 @@
     <Compile Include="SignInForm.Designer.cs">
       <DependentUpon>SignInForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TestType.cs" />
     <Compile Include="UserInfo.cs" />
     <EmbeddedResource Include="adminEditLoginInfoForm.resx">
       <DependentUpon>adminEditLoginInfoForm.cs</DependentUpon>
